--- a/ROS/src/multi_turtle/CMakeLists.txt
+++ b/ROS/src/multi_turtle/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(python_turtle)
+project(multi_turtle)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
